<resources>
    <string name="app_name">SquirrelShooting</string>
    <string name="touchscreen">TOUCH SCREEN</string>
    <string name="gamestart">Game Start</string>
    <string name="howtoplay">How to Play</string>
    <string name="flick">1. Flick Squirrel!</string>
    <string name="getstar">2. Get as many as Stars!!!</string>
    <string name="watchout">3. Watch out for Obstacles!</string>
    <string name="menu">Back to Menu</string>
    <string name="credit">Credit</string>
    <string name="cre_mao">BGM ･ Sound effects : 魔王魂</string>
    <string name="cre_author">Producted by Pi-hyoro</string>
    <string name="records">Records</string>
    <string name="changeanimal">Change Animal</string>
    <string name="playagain">Play again?</string>
</resources>
