<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.giraffe.minori.squirrelshooting.MenuActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/flick"
        android:text="@string/flick"
        android:textSize="25sp"
        android:layout_marginLeft="8sp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8sp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8sp"
        android:layout_marginBottom="8sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.015"
        app:layout_constraintHorizontal_bias="0.502" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/squirrel"
        android:src="@drawable/squirrel"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8sp"
        app:layout_constraintVertical_bias="0.024"
        android:layout_marginLeft="8sp"
        app:layout_constraintTop_toBottomOf="@+id/flick"
        android:layout_marginRight="8sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.447"/>

    <ImageView
        android:layout_width="79sp"
        android:layout_height="118sp"
        android:id="@+id/flickhand"
        android:src="@drawable/flickhand"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="0sp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8sp"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginLeft="8sp"
        app:layout_constraintTop_toBottomOf="@+id/flick"
        android:layout_marginRight="8sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.597" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/getstar"
        android:text="@string/getstar"
        android:textSize="25sp"
        android:layout_marginLeft="8sp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8sp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8sp"
        android:layout_marginBottom="8sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.314" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/squirrel2"
        android:src="@drawable/squirrel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="266sp"
        android:layout_marginLeft="8sp"
        android:layout_marginRight="8sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.607" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/star"
        android:src="@drawable/star"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="30sp"
        android:layout_marginLeft="8sp"
        android:layout_marginRight="8sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.402"
        app:layout_constraintBottom_toTopOf="@+id/watchout" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/star2"
        android:src="@drawable/star"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="55sp"
        android:layout_marginLeft="8sp"
        android:layout_marginRight="8sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.355"
        app:layout_constraintBottom_toTopOf="@+id/watchout" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/star3"
        android:src="@drawable/star"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="70sp"
        android:layout_marginLeft="8sp"
        android:layout_marginRight="8sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.431"
        app:layout_constraintBottom_toTopOf="@+id/watchout" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/watchout"
        android:text="@string/watchout"
        android:textSize="25sp"
        android:layout_marginLeft="8sp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8sp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8sp"
        android:layout_marginBottom="8sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.579" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/earth"
        android:src="@drawable/earth"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8sp"
        app:layout_constraintVertical_bias="0.778"
        app:layout_constraintRight_toLeftOf="@+id/mars"
        android:layout_marginLeft="8sp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mars"
        android:src="@drawable/mars"
        android:layout_marginLeft="8sp"
        app:layout_constraintLeft_toRightOf="@+id/earth"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8sp"
        app:layout_constraintVertical_bias="0.778"
        app:layout_constraintRight_toLeftOf="@+id/saturn" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/saturn"
        android:src="@drawable/saturn"
        app:layout_constraintLeft_toRightOf="@+id/mars"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8sp"
        app:layout_constraintVertical_bias="0.778"
        app:layout_constraintRight_toLeftOf="@+id/blackhall" />

    <ImageView
        android:layout_width="119sp"
        android:layout_height="124sp"
        android:id="@+id/blackhall"
        android:src="@drawable/blackhall"
        app:layout_constraintLeft_toRightOf="@+id/saturn"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8sp"
        app:layout_constraintVertical_bias="0.778"
        android:layout_marginRight="8sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        android:id="@+id/menu"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8sp"
        android:layout_marginTop="8sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.964"
        android:layout_marginLeft="8sp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8sp"
        app:layout_constraintHorizontal_bias="0.502" />

</android.support.constraint.ConstraintLayout>